--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,10 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.4",
     "axios": "^0.27.2",
     "next": "latest",
     "react": "^17.0.2",
