lint系インストール

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
-    "source.fixAll": true
-  },
-  "eslint.alwaysShowStatus": true
+    "source.addMissingImports": true,
+    "source.fixAll.eslint": true
+  }
 }
