--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,5 +29,8 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.7.1",
     "typescript": "4.0"
+  },
+  "resolutions": {
+    "@types/react": "17.0.44"
   }
 }
