--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -22,6 +22,7 @@
   "plugins": ["react", "@typescript-eslint", "import", "unused-imports"],
   "rules": {
     "react/react-in-jsx-scope": "off",
+    "react/prop-types": "off",
     "import/order": [
       "warn",
       {
