--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,15 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@hookform/resolvers": "^2.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
     "axios": "^0.27.2",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.33.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
