--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,11 @@
     "dev": "next dev -p 3333",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "lint": "eslint './src/**/*.{ts,tsx}'",
+    "lint:fix": "eslint --fix './src/**/*.{ts,tsx}'",
+    "format": "prettier --check './src/**/*.{ts,tsx}'",
+    "format:fix": "prettier --write './src/**/*.{ts,tsx}'"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -29,6 +33,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.7.1",
     "typescript": "4.0"
